// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template-management-repository updateRoutingConfigurationRecord should update routing configuration record successfully 1`] = `
{
  "ConditionExpression": "attribute_not_exists(#lockNumber) OR #lockNumber = :expectedLockNumber",
  "ExpressionAttributeNames": {
    "#lockNumber": "lockNumber",
  },
  "ExpressionAttributeValues": {
    ":createdBy": "newCreator",
    ":expectedLockNumber": 1,
    ":updatedBy": "newUpdater",
  },
  "Key": {
    "id": "routingConfiguration1",
    "owner": "owner1",
  },
  "ReturnValues": "ALL_NEW",
  "TableName": "nhs-notify-test-env-app-api-routing-configuration",
  "UpdateExpression": "SET createdBy = :createdBy, updatedBy = :updatedBy",
}
`;

exports[`template-management-repository updateTemplateRecord should update template record successfully 1`] = `
{
  "ConditionExpression": "attribute_not_exists(#lockNumber) OR #lockNumber = :expectedLockNumber",
  "ExpressionAttributeNames": {
    "#lockNumber": "lockNumber",
  },
  "ExpressionAttributeValues": {
    ":createdBy": "newCreator",
    ":expectedLockNumber": 1,
    ":updatedBy": "newUpdater",
  },
  "Key": {
    "id": "template1",
    "owner": "owner1",
  },
  "ReturnValues": "ALL_NEW",
  "TableName": "nhs-notify-test-env-app-api-templates",
  "UpdateExpression": "SET createdBy = :createdBy, updatedBy = :updatedBy",
}
`;

exports[`template-management-repository updateTemplateRecord should update template record successfully with missing createdBy 1`] = `
{
  "ConditionExpression": "attribute_not_exists(#lockNumber) OR #lockNumber = :expectedLockNumber",
  "ExpressionAttributeNames": {
    "#lockNumber": "lockNumber",
  },
  "ExpressionAttributeValues": {
    ":createdBy": "originalCreator",
    ":expectedLockNumber": 0,
    ":updatedBy": "newUpdater",
  },
  "Key": {
    "id": "template1",
    "owner": "owner1",
  },
  "ReturnValues": "ALL_NEW",
  "TableName": "nhs-notify-test-env-app-api-templates",
  "UpdateExpression": "SET createdBy = :createdBy, updatedBy = :updatedBy",
}
`;

exports[`template-management-repository updateTemplateRecord should update template record successfully with missing updatedBy 1`] = `
{
  "ConditionExpression": "attribute_not_exists(#lockNumber) OR #lockNumber = :expectedLockNumber",
  "ExpressionAttributeNames": {
    "#lockNumber": "lockNumber",
  },
  "ExpressionAttributeValues": {
    ":createdBy": "newCreator",
    ":expectedLockNumber": 0,
    ":updatedBy": "originalUpdater",
  },
  "Key": {
    "id": "template1",
    "owner": "owner1",
  },
  "ReturnValues": "ALL_NEW",
  "TableName": "nhs-notify-test-env-app-api-templates",
  "UpdateExpression": "SET createdBy = :createdBy, updatedBy = :updatedBy",
}
`;
